--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.26.1",
     "cz-conventional-changelog": "^1.1.6",
     "ejs-compiled-loader": "^1.1.0",
