--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ menu:
   archives: /archives
   tags: /tags
   #schedule: /schedule     
-  #commonweal: /404.html
+  commonweal: /404.html
 
 #Links
 links:
